Sample Projekt und HubClient hinzugefügt.

--- a/src/Incom.Web.RestCalendarClient/Incom.Web.RestCalendarClient.csproj
+++ b/src/Incom.Web.RestCalendarClient/Incom.Web.RestCalendarClient.csproj
@@ -1,20 +1,20 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>netstandard1.4;net46</TargetFrameworks>
     <Authors>René Klar</Authors>
     <Company>in-com GmbH</Company>
-    <Description>WinFriedSE / Terminplaner API .NET Client</Description>
+    <Description>Bestattungskalender/Terminplaner API .NET Client</Description>
     <PackageProjectUrl>https://www.in-com.de/</PackageProjectUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>in-com;incom;webapi;restapi;winfriedse;terminplaner</PackageTags>
     <PackageIconUrl>https://avatars2.githubusercontent.com/u/11389790?v=3&amp;s=400</PackageIconUrl>
     <NeutralLanguage>de-DE</NeutralLanguage>
     <Copyright>in-com GmbH $([System.DateTime]::Now.ToString("yyyy"))</Copyright>
-    <Version>1.2.3</Version>
+    <Version>1.0.0</Version>
     <PackageReleaseNotes></PackageReleaseNotes>
-    <AssemblyVersion>1.2.3.0</AssemblyVersion>
-    <FileVersion>1.2.3.0</FileVersion>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
