--- a/src/Incom.Web.HubClient/Incom.Web.HubClient.csproj
+++ b/src/Incom.Web.HubClient/Incom.Web.HubClient.csproj
@@ -1,24 +1,25 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.4;net46</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <Authors>René Klar</Authors>
     <Company>in-com GmbH</Company>
-    <Description>WinFriedSE / Terminplaner API .NET Client</Description>
+    <Description>WinFriedSE Hub .NET Client</Description>
     <PackageProjectUrl>https://www.in-com.de/</PackageProjectUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageTags>in-com;incom;webapi;restapi;winfriedse;terminplaner</PackageTags>
+    <PackageTags>in-com;incom;webapi;restapi;winfriedse;hub</PackageTags>
     <PackageIconUrl>https://avatars2.githubusercontent.com/u/11389790?v=3&amp;s=400</PackageIconUrl>
     <NeutralLanguage>de-DE</NeutralLanguage>
     <Copyright>in-com GmbH $([System.DateTime]::Now.ToString("yyyy"))</Copyright>
-    <Version>1.2.3</Version>
+    <Version>1.0.0</Version>
     <PackageReleaseNotes></PackageReleaseNotes>
-    <AssemblyVersion>1.2.3.0</AssemblyVersion>
-    <FileVersion>1.2.3.0</FileVersion>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="jose-jwt" Version="2.4.0" />
+    <PackageReference Include="Microsoft.AspNet.SignalR.Client" Version="2.2.3" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="System.Net.Http" Version="4.3.3" />
   </ItemGroup>
